--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,6 @@
 <body>   
     this is contact page
     <h1>This is new feature</h1>
-    <h1>This is new feature</h1>
+    <h1>This is new feature</h1>this is
 </body>
 </html>
