--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,6 @@
     this is contact page
     <h1>This is new feature</h1>
     <h1>This is new feature</h1>this is
+    <h2> this is branch update code</h2>
 </body>
 </html>
