--- a/news.html
+++ b/news.html
@@ -10,5 +10,6 @@
     this is news page
     <h1>This is new feature</h1>
     <h1>This is new feature</h1>
+    <h2> this is branch update code</h2>
 </body>
 </html>
